# sysaudit

./: .gitignore  BLUEPRINT_TEMPLATE.md  Cargo.toml  DATA_SOURCES.md  LICENSE  Makefile  README.md  architecture.md  context.md
.agent/workflows/: add-feature.md
scripts/: run_cli_tests.sh  test_all.sh  verify_output.ps1
specs/: Cargo.toml
specs/features/: cli_interface.feature  error_handling.feature  industrial_detection.feature  output_formats.feature  software_scan.feature  system_info.feature  windows_updates.feature
specs/tests/: bdd_runner.rs
specs/tests/steps/: cli_steps.rs  error_steps.rs  industrial_steps.rs  mod.rs  output_steps.rs  software_steps.rs  system_steps.rs  updates_steps.rs
sysaudit/: Cargo.toml  README.md  architecture.md  spec.md
sysaudit-cli/: Cargo.toml  README.md
sysaudit-cli/src/: main.rs
sysaudit-cli/tests/: cli_tests.rs
sysaudit/src/: error.rs  industrial.rs  lib.rs  local.rs  remote.rs  scanner.rs  software.rs  system.rs  updates.rs
sysaudit/src/output/: console.rs  csv_output.rs  mod.rs
sysaudit/src/remote/: payload.rs  transport.rs
