[package]
name = "sysaudit-cli"
description = "CLI for Windows system auditor"
readme = "README.md"
keywords = ["windows", "audit", "cli", "system", "inventory"]
categories = ["command-line-utilities", "os::windows-apis"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sysaudit"
path = "src/main.rs"

[dependencies]
sysaudit = { version = "0.1.0", path = "../sysaudit" }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
