[package]
name = "sysaudit"
description = "Windows system auditor: enumerate installed software, updates, and industrial applications"
documentation = "https://docs.rs/sysaudit"
readme = "README.md"
keywords = ["windows", "registry", "audit", "software", "wmi"]
categories = ["os::windows-apis", "command-line-utilities"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
windows-registry = "0.4"
wmi = "0.14"
sysinfo = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
csv = "1.3"
comfy-table = "7.1"
windows-result = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
