[package]
name = "sysaudit"
description = "Windows system auditor: enumerate installed software, updates, and industrial applications"
documentation = "https://docs.rs/sysaudit"
readme = "README.md"
keywords = ["windows", "registry", "audit", "software", "wmi"]
categories = ["os::windows-apis", "command-line-utilities"]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/wends155/sysaudit"

[features]
default = ["local"]
local = ["dep:windows-registry", "dep:wmi", "dep:sysinfo"]
remote = ["dep:reqwest", "dep:bon", "dep:secrecy", "dep:tokio", "dep:uuid", "dep:base64", "dep:async-trait"]

[dependencies]
windows-registry = { version = "0.4", optional = true }
wmi = { version = "0.14", optional = true }
sysinfo = { version = "0.32", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
csv = "1.3"
comfy-table = "7.1"
windows-result = "0.3"
reqwest = { version = "0.13.2", features = ["json", "rustls"], optional = true }
sysaudit-common = { version = "0.1.0", path = "../../sysaudit-common" }
bon = { version = "3.9.0", optional = true }
secrecy = { version = "0.10.3", optional = true }
tokio = { version = "1", features = ["rt", "time"], optional = true }
uuid = { version = "1.12.1", features = ["v4"], optional = true }
base64 = { version = "0.22.1", optional = true }
async-trait = { version = "0.1.86", optional = true }

[dev-dependencies]
mockall = "0.14.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
